# BandtrackPlus

./: .gitignore  ARCHITECTURE.md  CCF_v3_1.md  Dockerfile  README.md  backup.sh  bandtrack.db  bandtrack_ccf_v4.md  db.js  docker-compose.yml  frontend.jsx  main.py  package.json  pyproject.toml  requirements.txt  reset-db.sh  server.js  server.py  tailwind.config.js  vite.config.js
backend/: alembic.ini  database.py  main.py  models.py
certs/: cert.pem  key.pem  server.crt  server.key
docs/: guide_utilisateur.md
frontend/: index.html  package.json  vite.config.js
public/: app.bundle.js  app.js  index.html  manifest.json  offline.html  service-worker.js  style.css  tailwind.css
scripts/: create_indexes.js  init_postgres.py  migrate.js  migrate_audio_notes_array.js  migrate_audio_notes_array.py  migrate_legacy_group_members.py  migrate_password_hex_to_blob.js  migrate_performance_location.py  migrate_sessions_group_id.py  migrate_sqlite_to_postgres.py  migrate_suggestion_votes.py  migrate_to_multigroup.js  migrate_to_multigroup.py
src/: App.jsx
tests/: conftest.py  test_account_deletion.py  test_agenda.py  test_api.py  test_audio_notes.py  test_context_persistence.py  test_execute_write.py  test_foreign_keys.py  test_group_invite.py  test_group_isolation.py  test_group_leave.py  test_group_members.py  test_groups.py  test_memberships.py  test_migrations_scripts.py  test_notifications.py  test_partitions.py  test_password_change.py  test_registration_errors.py  test_sessions.py  test_sessions_group_id.py  test_settings.py  test_sheet_music.py  test_ui_xss.py  (+5 more)
(+25 files in other folders)
