[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bandtrack"
version = "0.1.0"
description = "BandTrack application backend"
authors = [{ name = "BandTrack Contributors" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "reportlab",
    "websockets",
    "psycopg2-binary",
]

[project.optional-dependencies]
# Development and test dependencies
dev = ["testcontainers"]

[tool.setuptools]
packages = ["bandtrack"]

[tool.pytest.ini_options]
markers = [
    "nodb: test does not require a database connection",
]
